Have finished the main functionality