@@ -5,21 +5,31 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
+import ru.rostanin.polyclinic.domain.Appointment;
 import ru.rostanin.polyclinic.domain.Doctor;
+import ru.rostanin.polyclinic.domain.Patient;
+import ru.rostanin.polyclinic.services.AppointmentsService;
 import ru.rostanin.polyclinic.services.DoctorsService;
+import ru.rostanin.polyclinic.services.PatientsService;
 
 import javax.validation.Valid;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 
 @Controller
 @RequestMapping("/doctors")
 public class DoctorsController {
 
     private final DoctorsService doctorsService;
+    private final PatientsService patientsService;
+    private final AppointmentsService appointmentsService;
+
 
     @Autowired
-    public DoctorsController(DoctorsService doctorsService) {
+    public DoctorsController(DoctorsService doctorsService, PatientsService patientsService, AppointmentsService appointmentsService) {
         this.doctorsService = doctorsService;
+        this.patientsService = patientsService;
+        this.appointmentsService = appointmentsService;
     }
 
     @GetMapping
@@ -30,8 +40,30 @@ public class DoctorsController {
 
     @GetMapping("{id}")
     public String show(@PathVariable String id, Model model) {
-        model.addAttribute("doctors", Collections.singletonList(doctorsService.get(id)));
+        model.addAttribute("doctors", List.of(doctorsService.get(id)));
         return "doctors/list";
+    }
+
+    @GetMapping(params = "specialty")
+    public String showBySpecialty(@RequestParam(value = "specialty") String specialty, Model model) {
+        model.addAttribute("doctors", doctorsService.findBySpecialty(specialty));
+        return "doctors/list";
+    }
+
+    @GetMapping(params = "fullName")
+    public String showByFullName(@RequestParam(value = "fullName") String fullName, Model model) {
+        Doctor doctor = doctorsService.findByFullName(fullName);
+        model.addAttribute("doctors", List.of(doctor));
+
+        List<Appointment> appointments = appointmentsService.findByFullName(fullName);
+        if (appointments.isEmpty()) return "doctors/list";
+
+        List<Patient> patients = new ArrayList<>();
+        for (var a : appointments) patients.add(patientsService.findByRegistrationNumber(a.getRegistrationNumber()));
+        if (patients.isEmpty()) return "doctors/list";
+        model.addAttribute("patients", patients);
+
+        return "doctors/search";
     }
 
     @GetMapping("/new")
@@ -72,6 +104,21 @@ public class DoctorsController {
     @GetMapping("/{id}/delete")
     public String delete(@PathVariable String id) {
         doctorsService.delete(id);
+        appointmentsService.delete(id);
         return "redirect:/doctors";
     }
+
+    @GetMapping("/clear")
+    public String deleteAll() {
+        doctorsService.deleteAll();
+        appointmentsService.deleteAll();
+        return "redirect:/doctors";
+    }
+
+    @GetMapping("/persist")
+    public String persistData() {
+        doctorsService.persist();
+        return "redirect:/doctors";
+    }
+
 }
